# grafana-loki-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  cli.py  move_e2e_files.py  mypy.ini  package-lock.json  package.json  pyproject.toml  server.py  setup.py
.cursor/rules/: fastmcp.mdc  mcp.mdc  uv.mdc
.github/workflows/: publish.yml  python-tests.yml  test.yml
.serena/: project.yml
.serena/memories/: comprehensive_analysis_2025_09_05.md  project_architecture_patterns.md
claudedocs/: analysis-report.md
e2e/: .env.tempalte  README.md  __init__.py  e2e_test.py  run_client.sh  run_server.sh  run_test.py  run_with_mcp_cli.py  simple_client.py
examples/: query_logs.py
grafana_loki_mcp/: __init__.py  __main__.py  __version__.py  server.py
tests/: __init__.py  conftest.py  test_parse_grafana_time.py  test_parse_grafana_time_invalid_unit.py  test_server.py
