[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grafana_loki_mcp"]

[project]
name = "grafana-loki-mcp"
dynamic = ["version"]
description = "A FastMCP server for querying Loki logs from Grafana"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "tumf", email = "tumf@no-reply.github.com" },
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.version]
path = "grafana_loki_mcp/__version__.py"

[project.urls]
Homepage = "https://github.com/tumf/grafana-loki-mcp"
Issues = "https://github.com/tumf/grafana-loki-mcp/issues"

[project.scripts]
grafana-loki-mcp = "grafana_loki_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.270",
    "types-requests>=2.25.0",
    "types-setuptools",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv.workspace]
members = ["uv-demo"]
